--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,10 @@ dependencies:
   json_annotation: ^4.9.0
   equatable: ^2.0.5
   uuid: ^4.1.0
+  
+  # Shared utilities module
+  soccer_utilities:
+    path: ../utilities
 
 dev_dependencies:
   # Testing framework and coverage
